--- a/it_modernization/modernization.yaml
+++ b/it_modernization/modernization.yaml
@@ -588,7 +588,7 @@ agencies:
         source: https://www.washingtonpost.com/politics/2025/02/17/doge-social-security-musk/
       - date: 2025-02-20
         event: Several DOGE staffers at the agency are identified by Social Security Works (a nonprofit advocacy group)
-        source: https://bsky.app/profile/marisakabas.bsky.social/post/3limtcjvhzc2d
+        source: https://www.thehandbasket.co/p/leland-dudek-ssa-doge
     systems:
       - name: Anti-Fraud Enterprise Solution
         acronym: AFES
