Added Hegseth comments

--- a/it_modernization/modernization.yaml
+++ b/it_modernization/modernization.yaml
@@ -125,6 +125,9 @@ agencies:
       - date: 2025-02-18
         event: DoD agencies are ordered to provide lists of probationary employees to DOGE
         source: https://www.washingtonpost.com/national-security/2025/02/18/pentagon-layoffs-musk-doge-trump/
+      - date: 2025-02-20
+        event: Defense Secretary Hegseth releases a video stating that he met with DOGE about cuts to the agency and many are veterans
+        source: https://www.foxnews.com/politics/defense-sec-hegseth-working-doge-cut-bs
 
 
   - name: Department of Education
