--- a/it_modernization/modernization.yaml
+++ b/it_modernization/modernization.yaml
@@ -190,12 +190,13 @@ agencies:
         description: A system used for tracking and assisting in collection of federal student loans in default
         risk: PII and details of debt amounts for individuals who have defaulted on their loans
         pia: https://www.ed.gov/sites/ed/files/2025-01/PIA_FSA_DMCS_11_22_2024.pdf
+        sorn: https://www.federalregister.gov/documents/2023/07/27/2023-15931/privacy-act-of-1974-system-of-records
       - name: FAFSA Processing System
         acronym: FPS
         description: The system for receiving and evaluating applications for federal student aid and sharing determinations with universities
         risk: PII of student and parents, include names, address, SSNs, tax information and schools receiving the form
         pia: https://www.ed.gov/sites/ed/files/notices/pia/pia-fps.pdf
-        sorn: 
+        sorn: https://www.federalregister.gov/documents/2023/06/15/2023-12831/privacy-act-of-1974-system-of-records
       - name: FUTURE Act Systems
         acronym: FAS
         description: Systems for implementing the FUTURE Act, allowing FAFSA to obtain federal tax information for students
@@ -612,6 +613,7 @@ agencies:
       - name: Government-Wide Email System
         acronym: GWES
         pia: https://www.opm.gov/media/kfpozkad/gwes-pia.pdf
+        sorn: https://www.federalregister.gov/documents/2017/12/05/2017-26107/privacy-act-of-1974-system-of-records
         description: A new system developed by DOGE for sending out email to all federal employees and collecting responses. It was most famously used for the Fork in The Road email.
         risk: There are concerns it is an external system and did not go through a privacy review
     sources:
@@ -674,35 +676,35 @@ agencies:
         description: System for detecting and preventing fraud in Social Security
         risk: PII of individuals stored in other systems and copied here for investigation
         pia: https://www.ssa.gov/privacy/pia/AFES_OPD%20Draft_PIA_04-17-2018.htm
+        sorn: https://www.govinfo.gov/content/pkg/FR-2022-04-28/pdf/2022-09091.pdf
       - name: Electronic Disability System
         acronym: eDib
         description: System for processing disability claims against Social Security
         risk: PII and PHI of individuals applying for disability benefits, including names, SSNs, and medical information related to their disability
         pia: https://www.ssa.gov/privacy/pia/eDib%20PIA%20OPD%20Final_Feb%201,%202018.pdf
+        sorn: https://www.govinfo.gov/content/pkg/FR-2020-06-04/pdf/2020-12067.pdf
       - name: Electronic Wage Reporting System
         acronym: EWR
         decription: A system for employers to submit W-2 records every year for their employees
         risk: Private tax information for every American
         pia: https://www.ssa.gov/privacy/pia/Final%20PIA%20for%20the%20EWR%20System.htm
+        sorn: https://www.ssa.gov/privacy/sorn/60-0059.pdf
       - name: Human Resources System
         acronym: HRS
         description: Collection of systems for human resources, timekeeping and payroll for SSA employees
         risk: PII of SSA employees, including names, SSNs, and payroll information
         pia: https://www.ssa.gov/privacy/pia/HRS%20PIA.htm
-      - name: Master Beneficiary Record
-        acronym: MBR
-        descrption: A record of all each claimant who has applied for Retirement/Survivors Insurance or Disability benefits
-        risk: PII of individuals including names, SSNs and other information, as well as PHI of disabilities and the amounts of payments received
-        sorn: https://www.ssa.gov/privacy/sorn/60-0090.pdf
       - name: Social Security Number Establishment and Correction System
         acronym: SSNEC
         decription: The system for issuing new SSNs as well as replacement SSN cards
         risk: PII of individual include SSNs and information submitted on birth certificates
         pia: https://www.ssa.gov/privacy/pia/Social%20Security%20Number%20Establishment%20and%20Correction%20System.updtdSept%2028.htm
+        sorn: https://www.federalregister.gov/documents/2024/12/31/2024-31131/privacy-act-of-1974-system-of-records
       - name: Title II
         description: Major Application consisting of sub-systems and applications associated with receiving, adjudicating, and processing applications for Title II Social Security benefits.
         risk: PII of individuals including names, SSNs, SS claims and Medicare eligibility
         pia: https://www.ssa.gov/privacy/pia/Title%20II%20PIA%20Final.htm
+        sorn: https://www.ssa.gov/privacy/sorn/60-0090.pdf
     sources:
       - https://www.cnn.com/2025/02/17/politics/social-security-head-steps-down-doge-access/index.html
 
