Changing Gautier Killian's listed name to Cole since he seems to go by that more

--- a/it_modernization/modernization.yaml
+++ b/it_modernization/modernization.yaml
@@ -249,7 +249,7 @@ agencies:
   people:
   - Sam Beyda
   - Derek Geissler
-  - Gautier Killian
+  - Cole Killian
   - Adam Ramada
   - Jordan Wick
   events:
@@ -322,7 +322,7 @@ agencies:
 - name: Environmental Protection Agency
   acronym: EPA
   people:
-  - Gautier Killian
+  - Cole Killian
   - Catherine Armstrong Loving
   events:
   - date: 2025-01-24
@@ -696,7 +696,7 @@ agencies:
   - Marko Elez
   - Ethan Shaotran
   - Nikhil Rajpal
-  - Gautier Killian
+  - Cole Killian
   events:
   - date: 2025-02-16
     event: The acting director of the Social Security Administration, Michelle King, resigned rather than authorize DOGE access to SSA systems
